--- a/backend/package.json
+++ b/backend/package.json
@@ -7,7 +7,8 @@
     "dev": "tsc && electron ."
   },
   "devDependencies": {
-    "electron": "^28.0.0",
+    "@types/node": "^25.1.0",
+    "electron": "^28.3.3",
     "typescript": "^5.3.0"
   }
 }
