--- a/signaling-server/package.json
+++ b/signaling-server/package.json
@@ -4,12 +4,13 @@
   "scripts": {
     "dev": "ts-node src/server.ts"
   },
-  "dependencies": {
-    "ws": "^8.16.0"
-  },
   "devDependencies": {
+    "@types/socket.io": "^3.0.1",
     "@types/ws": "^8.5.10",
     "ts-node": "^10.9.2",
     "typescript": "^5.3.0"
+  },
+  "dependencies": {
+    "socket.io": "^4.8.3"
   }
 }
