--- a/backend/package.json
+++ b/backend/package.json
@@ -10,5 +10,8 @@
     "@types/node": "^25.1.0",
     "electron": "^28.3.3",
     "typescript": "^5.3.0"
+  },
+  "dependencies": {
+    "socket.io-client": "^4.8.3"
   }
 }
